Fix overflow-y on $content-container

--- a/elements/elements.scss
+++ b/elements/elements.scss
@@ -33,7 +33,7 @@ $content-container: "body > main" !default;
   -ms-overflow-style: none;
 
   /* enable vertical scrolling */
-  overflow-y: scroll;
+  overflow-y: auto;
 
   -webkit-font-smoothing: antialiased;
   word-break: break-all;
